--- a/meadmin/css/style.css
+++ b/meadmin/css/style.css
@@ -1,9 +1,3 @@
-/*
-Author: W3layout
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
-*/
 html, body{
 	font-family: 'Roboto', sans-serif;
     font-size: 100%;
@@ -16,7 +10,7 @@ body a{
 	-moz-transition:0.5s all;
 	-o-transition:0.5s all;
 	-ms-transition:0.5s all;
-	background:#011D4A!mportant;
+	background:#011D4A !important;
 }
 a:focus, a:active, a:hover ,a.dropdown-toggle{
     outline: none;
@@ -315,6 +309,7 @@ span.name-caret {
     -moz-border-radius: 50%;
     -webkit-border-radius: 50%;
     border: 3px solid #002561;
+	width:70px;
 }
 
 .down{
@@ -357,7 +352,7 @@ a.tooltips {
   display: inline;
 }
 a.tooltips span {
-     position: absolute;
+    position: absolute;
     width: 65px;
     color: #FFFFFF;
     background: #09367D;
@@ -389,7 +384,7 @@ a:hover.tooltips span {
 /*--//down--*/
 /*--/top_header--*/
 span#logo h1 {
-         font-size: 2em;
+    font-size: 2em;
     color: #fff;
     margin: 0;
     text-decoration: none;
@@ -1959,7 +1954,7 @@ h2.inner-tittle,h3.inner-tittle {
     text-align: left;
 }
 .graph{
-       background: #fff;
+    background: #fff;
     padding: 2em 2em;
     position: relative;
     box-shadow: 0 1px 1px rgba(0,0,0,.05);
@@ -7279,7 +7274,7 @@ footer  p a:hover ,.footer p a:hover{
 	.ribbon3 span:after {
 		content: "";
 		width: 220px;
-		height: 60px
+		height: 60px;
 	    top: -30px;
 		}
 	.ribbon3 span:before {
