--- a/students/css/style.css
+++ b/students/css/style.css
@@ -1,9 +1,3 @@
-/*
-Author: W3layout
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
-*/
 html, body{
 	font-family: 'Roboto', sans-serif;
     font-size: 100%;
@@ -310,22 +304,23 @@ span.name-caret {
     font-weight: 400;
 }
 .down  a img {
-         border-radius: 50%;
+    border-radius: 50%;
     -o-border-radius: 50%;
     -moz-border-radius: 50%;
     -webkit-border-radius: 50%;
-    border: 3px solid #002561;
+    border: 2px solid #002561;
+	width:70px;
 }
 
 .down{
 	padding: 26px 0 30px;
     text-align: center;
-      background: #fff;
+    background: #fff;
 }
 .dropdown-menu li a i{
     font-size: 14px;
     margin-right: 6%;	
-	    color: #879498;
+	color: #879498;
 }
 .down p {
     font-size: 0.9em;
@@ -339,15 +334,19 @@ span.name-caret {
 .down ul li a {
     color: #fff;
     background: none;
-	    text-decoration: none;
+	text-decoration: none;
 }
 .down i {
     font-size: 1.2em;
 	color:#00C6D7;
 	vertical-align: middle;
+	background-color: white;
 }
 i.lnr.lnr-user {
     font-size: 1.07em;
+}
+i.lnr .lnr-cog{
+	font-size: 1.3em;
 }
 i.lnr.lnr-power-switch {
     font-size: 1.3em;
@@ -357,10 +356,10 @@ a.tooltips {
   display: inline;
 }
 a.tooltips span {
-     position: absolute;
+    position: absolute;
     width: 65px;
     color: #FFFFFF;
-    background: #09367D;
+	background: #09367D;
     height:28px;
     line-height: 30px;
     text-align: center;
@@ -384,7 +383,7 @@ a:hover.tooltips span {
   top: 30px;
   left: 50%;
   margin-left: -38px;
-  z-index: 999;
+  z-index: 969;
 }
 /*--//down--*/
 /*--/top_header--*/
@@ -1959,7 +1958,7 @@ h2.inner-tittle,h3.inner-tittle {
     text-align: left;
 }
 .graph{
-       background: #fff;
+    background: #fff;
     padding: 2em 2em;
     position: relative;
     box-shadow: 0 1px 1px rgba(0,0,0,.05);
@@ -2011,12 +2010,12 @@ ol.breadcrumb.m-b-0 li a:hover {
     margin: 1.5em 0;
 }
 .graph-2 {
-       padding: 0;
+    padding: 0;
     margin-right: 2%;
     width: 49%;
 }
 .graph-2.second {
-       padding: 0;
+    padding: 0;
     margin-right:0%;
     width: 49%;
 	float:right;
@@ -2029,7 +2028,7 @@ ol.breadcrumb.m-b-0 li a:hover {
 .text-2 {
     float: left;
     width: 70%;
-	    margin-top: 1.3em;
+	margin-top: 1.3em;
 }
 .text-1 {
     float: right;
@@ -7279,7 +7278,7 @@ footer  p a:hover ,.footer p a:hover{
 	.ribbon3 span:after {
 		content: "";
 		width: 220px;
-		height: 60px
+		height: 60px;
 	    top: -30px;
 		}
 	.ribbon3 span:before {
